# db_public

./: .gitignore  .pdm-python  1-intro-sql.html  2-intro-shiny.html  README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
devtools/: example1.ipynb
tasks/: 1-intro-sql.html  1-intro-sql.ipynb  2-intro-shiny.html  2-intro-shiny.ipynb
