[project]
name = "db_public"
version = "0.1.0"
description = "DataBooth Public repo"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "notebook>=7.1.3",
    "ipykernel>=6.29.4",
    "ipython>=8.24.0",
    "loguru>=0.7.2",
    "duckdb>=0.10.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "DataBooth"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black[jupyter]>=24.4.2",
]
